plugins {
    id "com.android.application"
    id "com.google.gms.google-services"
}

android {
    namespace 'jp.ac.meijou.android.huck_u'
    compileSdk 33

    defaultConfig {
        applicationId "jp.ac.meijou.android.huck_u"
        minSdk 33
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    viewBinding {
        enabled = true
    }
    sourceSets {
        main {
            assets {
                srcDirs 'src\\main\\assets', 'src\\main\\assets\\2'
            }
        }
    }
}

dependencies {

    implementation(platform("com.google.firebase:firebase-bom:32.6.0"))
    implementation 'com.google.firebase:firebase-database'
    implementation 'com.google.firebase:firebase-storage'
    implementation 'com.google.firebase:firebase-firestore:24.10.0'
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'

    implementation 'androidx.datastore:datastore-preferences:1.0.0'
    implementation 'androidx.datastore:datastore-preferences-rxjava3:1.0.0'

    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
    implementation 'com.squareup.moshi:moshi:1.15.0'

    def room_version = '2.5.2'
    implementation "androidx.room:room-runtime:$room_version"
    annotationProcessor "androidx.room:room-compiler:$room_version"

    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    //カメラのための記述
    def camerax_version = "1.2.1"
    implementation "androidx.camera:camera-core:$camerax_version"
    implementation "androidx.camera:camera-camera2:$camerax_version"
    implementation "androidx.camera:camera-lifecycle:$camerax_version"
    implementation "androidx.camera:camera-view:$camerax_version"
    implementation "com.google.mlkit:barcode-scanning:17.0.0" // ML Kitのバージョン
    implementation 'com.google.zxing:core:3.4.1'

    //csvのための記述
    implementation 'com.opencsv:opencsv:5.6'

    //firebase
    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
}